WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291537
Canvas element disappears for one frame if a view transition happens
https://bugs.webkit.org/show_bug.cgi?id=291537
Summary
Canvas element disappears for one frame if a view transition happens
miguel
Reported
2025-04-14 13:35:19 PDT
If a page has a canvas DOM element and a view transition happens, the canvas skips one frame. This happens both in SPA & MPA applications. Here's a reproduction; by clicking the button the text above it will receive a new text color, triggered during a view transition, and the canvas will completely disappear for one frame before the view transition happens.
https://bug-view-transition-canvas-safari.reeple-studio.workers.dev/
GitHub repository available at
https://github.com/miguderp/bug-view-transition-canvas-safari
To be sure I have two pages, one with the WebGL JS framework OGL and another with Three.js, both pages available through the navigation at the top. (I can confirm that the bug is also happening on iOS 18.3.2 + Safari) I hope this report has all the info needed, it's my first time – please let me know if I missed something. Thanks, Miguel
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-21 13:36:13 PDT
<
rdar://problem/149709642
>
Matt Woodrow
Comment 2
2025-05-26 19:51:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45932
EWS
Comment 3
2025-05-27 14:41:25 PDT
Committed
295467@main
(cd808a6b8722): <
https://commits.webkit.org/295467@main
> Reviewed commits have been landed. Closing PR #45932 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug