WebGL canvas element disappears for one frame drawn to while starting a view transition. https://bugs.webkit.org/show_bug.cgi?id=291537 <rdar://149709642>

Reviewed by Simon Fraser.

Drawing the canvas element into a snapshot calls
WebGLRenderingContextBase::prepareForDisplay which clears the drawing buffer.
Running this a second time during the main rendering update results in the
cleared drawing buffer being used instead.

Don't prepare for display for a second time if it's already been done by another
caller.

* LayoutTests/fast/css/view-transitions-webgl-expected.html: Added.
* LayoutTests/fast/css/view-transitions-webgl.html: Added.
* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::prepareForDisplay):

Canonical link: https://commits.webkit.org/295467@main